<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_login_bg_new"
    tools:context=".activity.MainActivity">

    <com.resmenu.customViews.CustomTextView
        android:id="@+id/txt_view_welcome_messsage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="88dp"
        app:fontType="gotham_bold"
        android:textSize="24sp"
        android:text="@string/welcome_message"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/image_view_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/top_margin"
        android:src="@mipmap/ic_launcher_round"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_view_welcome_messsage" />

    <android.support.design.widget.TextInputLayout
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:id="@+id/til_restaurent_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="148dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image_view_login">

        <android.support.design.widget.TextInputEditText
            android:drawableLeft="@drawable/new_person"
            android:id="@+id/et_restaurent_id"
            android:singleLine="true"
            app:fontType="gotham_medium"
            android:drawablePadding="5dp"
            android:imeOptions="actionNext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_id" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_marginRight="25dp"
        android:layout_marginLeft="25dp"
        android:id="@+id/til_restaurent_password"
        android:layout_marginTop="@dimen/top_margin"
        app:fontType="gotham_medium"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/til_restaurent_id">

        <android.support.design.widget.TextInputEditText
            android:drawableLeft="@drawable/new_pass"
            android:id="@+id/et_restaurent_password"
            android:hint="@string/hint_pass"
            app:fontType="gotham_medium"
            android:drawablePadding="5dp"
            android:imeOptions="actionDone"
            android:singleLine="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

    </android.support.design.widget.TextInputLayout>

    <com.resmenu.customViews.CustomTextView
        android:id="@+id/forgot_pass"
        android:layout_marginRight="25dp"
        android:visibility="invisible"
        android:text="@string/forgot_password"
        app:fontType="gotham_medium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/til_restaurent_password"
        />

    <com.resmenu.customViews.CustomButton
        android:id="@+id/button_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="40dp"
        android:layout_marginRight="30dp"
        android:textColor="@color/white"
        app:fontType="gotham_bold"
        android:background="@drawable/login_button"
        android:text="@string/txt_login"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/forgot_pass" />
</android.support.constraint.ConstraintLayout>